--- a/templates/postapp/detail.html
+++ b/templates/postapp/detail.html
@@ -18,7 +18,7 @@
 
         <div class="col-12 py-4">
             {% for tag in tags  %}
-                <a href="" class="btn btn-sm btn-outline-primary mb-1">{{tag.name}}</a>
+                <a href="{% url 'post_filter' tag.name %}" class="btn btn-sm btn-outline-primary mb-1">{{tag.name}}</a>
             {% endfor %}
             
         </div>
