--- a/templates/postapp/list.html
+++ b/templates/postapp/list.html
@@ -7,6 +7,31 @@
 {% block content %}
 <!-- Blog List Start -->
 <div class="container bg-white pt-5">
+    {% if filter %}
+        {% for post in posts_by_filter  %}
+            <div class="row blog-item px-3 pb-5">
+                <div class="col-md-5">
+                    {% if post.image %}
+                        <img class="img-fluid mb-4 mb-md-0" src="{{post.image.url}}" alt="Image">              
+                    {% endif %}
+                </div>
+                <div class="col-md-7">
+                    <h3 class="mt-md-4 px-md-3 mb-2 py-2 bg-white font-weight-bold">{{post.title}}</h3>
+                    <div class="d-flex mb-3">
+                        <small class="mr-2 text-muted"><i class="fa fa-calendar-alt"></i> {{ post.created_at|date:'M d, Y' }}</small>
+                        <small class="mr-2 text-muted"><i class="fa fa-folder"></i> Web Design</small>
+                        <small class="mr-2 text-muted"><i class="fa fa-comments"></i>{{post.comments.count}} Comments</small>
+                    </div>
+                    <p>
+                        {{post.body | slice:"100"}}
+                    </p>
+                    <a class="btn btn-link p-0" href="{% url 'post_detail' post.pk %}">Read More <i class="fa fa-angle-right"></i></a>
+                </div>
+            </div>
+    {% endfor %}
+    
+    {% endif %}
+
     {% for post in posts  %}
         <div class="row blog-item px-3 pb-5">
             <div class="col-md-5">
