tag qismi tuliq turilandi

--- a/templates/postapp/list.html
+++ b/templates/postapp/list.html
@@ -27,9 +27,11 @@
                     </p>
                     <a class="btn btn-link p-0" href="{% url 'post_detail' post.pk %}">Read More <i class="fa fa-angle-right"></i></a>
                 </div>
-            </div>
+            </div>           
+        {% empty %}
+        <p>No posts found for this tag.</p>
     {% endfor %}
-    
+
     {% endif %}
 
     {% for post in posts  %}
