--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,7 +10,7 @@
             <div class="navbar-nav m-auto">
                 <a href="{% url 'post_all' %}" class="nav-item nav-link active">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                <a href="{% url 'send_message' %}" class="nav-item nav-link">Contact</a>
             </div>
         </div>
     </nav>
