--- a/templates/contactapp/contact.html
+++ b/templates/contactapp/contact.html
@@ -41,9 +41,12 @@
     <div class="col-md-12 pb-5">
         <div class="contact-form">
             <div id="success"></div>
-            <form name="sentMessage" id="contactForm" novalidate="novalidate">
+            <form method='post'>
                 {% csrf_token %}
-                {{contact_form.as_p}}
+                {{contact_form.as_p}}              
+                <div>
+                    <button class="btn btn-primary" type="submit">Send Message</button>
+                </div>
             </form>
         </div>
     </div>
