--- a/templates/base.html
+++ b/templates/base.html
@@ -29,16 +29,19 @@
     <div class="wrapper">
         <div class="sidebar">
             <div class="sidebar-text d-flex flex-column h-100 justify-content-center text-center">
-                <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle mb-4 p-3" src="img/profile.jpg" alt="Image">
-                <h1 class="font-weight-bold">Kate Glover</h1>
+                <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle mb-4 p-3" src='{% static "images/about/profile.jpg" %}' alt="Image">
+                <h1 class="font-weight-bold">Faxriddin Baxtiyorov</h1>
                 <p class="mb-4">
-                    Justo stet no accusam stet invidunt sanctus magna clita vero eirmod, sit sit labore dolores lorem. Lorem at sit dolor dolores sed diam justo
+                    "Iqtisod yo‘nalishida tahsil olaman. 
+                    Python va Django’da dasturlash bo‘yicha amaliy tajribaga egaman, 
+                    ma’lumotlar bazalari bilan ishlash hamda data science yo‘nalishida rivojlanmoqdaman."
                 </p>
                 <div class="d-flex justify-content-center mb-5">
-                    <a class="btn btn-outline-primary mr-2" href="#"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-outline-primary mr-2" href="https://github.com/faxriddinprof" target="_blank"><i class="fab fa-github"></i></a>
+                    <a class="btn btn-outline-primary mr-2" href="https://t.me/faxriddinbaxtiyorov" target="_blank"><i class="fab fa-telegram"></i></a>
+                    <a class="btn btn-outline-primary mr-2" href="https://instagram.com/_faxriddin.b"><i class="fab fa-instagram"></i></a>
                     <a class="btn btn-outline-primary mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-outline-primary mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-primary mr-2" href="#"><i class="fab fa-instagram"></i></a>
                 </div>
                 <a href="" class="btn btn-lg btn-block btn-primary mt-auto">Hire Me</a>
             </div>
