about page was changed

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
             <div class="navbar-nav m-auto">
                 <a href="{% url 'post_all' %}" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
+                <a href="{% url 'about' %}" class="nav-item nav-link">About</a>
                 <a href="{% url 'send_message' %}" class="nav-item nav-link">Contact</a>
             </div>
         </div>
