--- a/templates/about.html
+++ b/templates/about.html
@@ -2,20 +2,7 @@
 {% load static %}
 {% block content %}
 <!-- Page Header Start -->
-<div class="container py-5 px-2 bg-primary">
-    <div class="row py-5 px-4">
-        <div class="col-sm-6 text-center text-md-left">
-            <h1 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">About Me</h1>
-        </div>
-        <div class="col-sm-6 text-center text-md-right">
-            <div class="d-inline-flex pt-2">
-                <h4 class="m-0 text-white"><a class="text-white" href="{% url 'post_all' %}">Home</a></h4>
-                <h4 class="m-0 text-white px-2">/</h4>
-                <h4 class="m-0 text-white">About Me</h4>
-            </div>
-        </div>
-    </div>
-</div>
+{% include "caresul_images.html" %}
 <!-- Page Header End -->
 
 
